--- a/rottenpotatoes/Gemfile
+++ b/rottenpotatoes/Gemfile
@@ -4,9 +4,9 @@ source 'https://rubygems.org'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.10'
 # Use sqlite3 as the database for Active Record - only for dev and testing
-gem 'sqlite3', '~> 1.3.0', group: [:development, :test]
+gem 'sqlite3', '~> 1.3.0' #, group: [:development, :test]
 # Production version for heroku needs postgres gem
-gem 'pg', group: [:production]
+# gem 'pg', group: [:production]
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 5.0'
 # Use Uglifier as compressor for JavaScript assets
